# smartestates

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: api.md  dedup.md  geocode.md  ingest.md  migrations.md  normalize.md  scoring.md  web.md
.github/workflows/: ci.yml
apps/web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: aggregate-map.tsx  analytics-client.tsx  breakdown-map.tsx  filter-bar.tsx  geolocation-heatmap.tsx  listing-detail.tsx  listings-map.tsx  listings-table.tsx  nav.tsx  providers.tsx  risk-flags.tsx  score-badge.tsx  search-client.tsx  yield-map.tsx
apps/web/src/lib/: api.ts  format.ts  types.ts  use-listings.ts
docs/: API.md  ARCHITECTURE.md  CZ_NOTES.md  DATA_MODEL.md  DEV_PLAN.md  GEO.md  INGESTION.md  OPERATIONS.md  README.md  RISKS.md  ROADMAP.md  SCORING.md  UI.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_ruian_address.py  0003_market_stats_and_score_latest.py  0004_seed_scoring_config_v1.py  0005_add_listing_kind_to_listing.py
scripts/: discover_sync.py  reparse_sreality.py  seed_ruian.py
src/api/: main.py
src/api/routers/: analytics.py  health.py  listings.py  scores.py
src/db/: orm.py  session.py
src/scoring/: __init__.py  composite.py  confidence.py  hedonic.py  liquidity.py  location.py  risks.py  segments.py  stats.py  yield_est.py
src/scraper/: base.py  geocode.py  http.py  ratelimit.py  ruian.py  storage.py
src/scraper/sources/: __init__.py
src/shared/: config.py  enums.py  logging.py  normalize.py  schemas.py
src/worker/: celery_app.py
src/worker/tasks/: dedup.py  geocode.py  ingest.py  normalize.py  ops.py  scoring.py
tests/: conftest.py  test_api_health.py  test_api_listings.py  test_api_scores.py  test_dedup.py  test_geocode.py  test_normalize.py  test_ruian.py  test_scoring_composite.py  test_scoring_confidence.py  test_scoring_hedonic.py  test_scoring_liquidity.py  test_scoring_location.py  test_scoring_risks.py  test_scoring_segments.py  test_scoring_stats.py  test_scoring_yield.py  test_sreality_parse.py
(+8 files in other folders)
